--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.26",
   "private": true,
   "dependencies": {
-    "@tauri-apps/api": "^1.0.0-rc.5",
+    "@tauri-apps/api": "^1.5.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.2.6",
@@ -52,7 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.0.0-rc.11",
+    "@tauri-apps/cli": "^1.5.9",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "cross-env": "^7.0.3",
